--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -4,11 +4,11 @@
 @import url("./components/footer.css");
 @import url("./components/skeleton.css");
 
-*, *::before, *::after  {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
   font-size: 18px;
@@ -469,13 +469,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.6;
-  color: var(--text-color);
-  background-color: var(--bg-light);
 }
 
 .container {
